--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js" ></script>
     </head>
     <body>
+        <center>
         <h1>
             bot de reconnosimiento de voz
         </h1>
@@ -22,6 +23,7 @@
         <div id="imgdellapipol" ></div>
         <p id="p" > asombrate contigo mismo D: </p>
         <div id="fotodellapipol" ></div>
+        </center>
         <script src="main.js" ></script>
     </body>
 </html>
